Resolved #48
Added code in the sublet ajax add and sublet edit files to
scale the modal window to fit inside the browser window better.
There is a bit of code duplication so we need to fix that at some point
but no longer is anything being cutoff

--- a/cake2cribs/app/webroot/css/ajax_sublet.css
+++ b/cake2cribs/app/webroot/css/ajax_sublet.css
@@ -32,3 +32,13 @@
 {
 	width:338px;
 }
+/*
+.sublet-add-wrapper{
+	position: absolute;
+}
+
+.sublet-register{
+	
+}
+*/
+
